@@ -716,10 +716,11 @@ def createLatticePvDb(dbfname, csv2fname = None):
                   devName    TEXT,
                   iocName    TEXT,
                   tags       TEXT,
-                  hlaHigh   REAL,
-                  hlaLow    REAL,
-                  hlaStep   REAL,
-                  hlaValRef REAL,
+                  speed       REAL,
+                  hlaHigh     REAL,
+                  hlaLow      REAL,
+                  hlaStepsize REAL,
+                  hlaValRef   REAL,
                   archive INT DEFAULT 0,
                   size    INT DEFAULT 0,
                   epsilon REAL DEFAULT 0.0,
